pkg/main/default/objects/Localization__mdt/Localization__mdt.object-meta.xml
<CustomObject>
    <label>DocuSign Localization Metadata</label>
    <pluralLabel>DocuSign Localization Metadata</pluralLabel>
</CustomObject>