pkg/main/default/objects/Localization__mdt/fields/ChatterEnvelopeCompleted__c.field-meta.xml
<CustomField>
    <fullName>ChatterEnvelopeCompleted__c</fullName>
    <label>Default Chatter Envelope Completed Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>