pkg/main/default/objects/Localization__mdt/fields/ChatterEnvelopeDeclined__c.field-meta.xml
<CustomField>
    <fullName>ChatterEnvelopeDeclined__c</fullName>
    <label>Default Chatter Envelope Declined Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>