pkg/main/default/objects/Localization__mdt/fields/ChatterEnvelopeDelivered__c.field-meta.xml
<CustomField>
    <fullName>ChatterEnvelopeDelivered__c</fullName>
    <label>Default Chatter Envelope Delivered Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>