pkg/main/default/objects/Localization__mdt/fields/ChatterEnvelopeSent__c.field-meta.xml
<CustomField>
    <fullName>ChatterEnvelopeSent__c</fullName>
    <label>Default Chatter Envelope Sent Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>