pkg/main/default/objects/Localization__mdt/fields/ChatterEnvelopeVoided__c.field-meta.xml
<CustomField>
    <fullName>ChatterEnvelopeVoided__c</fullName>
    <label>Default Chatter Envelope Voided Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>