pkg/main/default/objects/Localization__mdt/fields/ChatterRecipientCompleted__c.field-meta.xml
<CustomField>
    <fullName>ChatterRecipientCompleted__c</fullName>
    <label>Default Chatter Recipient Completed Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>