pkg/main/default/objects/Localization__mdt/fields/ChatterRecipientDeclined__c.field-meta.xml
<CustomField>
    <fullName>ChatterRecipientDeclined__c</fullName>
    <label>Default Chatter Recipient Sent Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>