pkg/main/default/objects/Localization__mdt/fields/ChatterRecipientDelivered__c.field-meta.xml
<CustomField>
    <fullName>ChatterRecipientDelivered__c</fullName>
    <label>Default Chatter Recipient Delivered Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>