pkg/main/default/objects/Localization__mdt/fields/EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>EmailMessage__c</fullName>
    <label>Default Envelope Email Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>