pkg/main/default/objects/Localization__mdt/fields/EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>EmailSubject__c</fullName>
    <label>Default Envelope Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>